NET-8940: delete-list action, recursive category-path resolution, leaf-category fallback for shallow paths
- Add a "delete entire list" action (service/facade/controller/JSP) alongside the existing
  per-product remove, with its own confirmation and i18n keys (English only).
- Refactor DefaultProductComparisonGroupingService.buildPathFromRoot to build the root-to-leaf
  category path recursively instead of via an iterative LinkedList/addFirst walk.
- Change grouping-category resolution: a category path shorter than the configured depth now
  falls back to the deepest available category instead of excluding the product from comparison;
  documented the leaf-category-only precondition this relies on.
- Add unit tests for DefaultProductComparisonGroupingService and DefaultProductComparisonService.
- Update CLAUDE.md and the hybris-backend-reviewer agent doc for the now-partial git tracking and
  the English-only localization policy; update the NET-8940 requirements doc to match.