@@ -10,7 +10,7 @@ import de.hybris.platform.commerceservices.helper.ProductAndCategoryHelper;
 import de.hybris.platform.core.model.product.ProductModel;
 import de.hybris.platform.servicelayer.config.ConfigurationService;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,6 +37,24 @@ public class DefaultProductComparisonGroupingService implements ProductCompariso
 	private ConfigurationService configurationService;
 	private ProductAndCategoryHelper productAndCategoryHelper;
 
+	/**
+	 * Resolves the grouping category for the given product's assigned category path, per
+	 * {@link ProductComparisonGroupingService} (NET-8940 section 5.2).
+	 * <p>
+	 * If the path is shorter than the configured depth, falls back to the deepest category actually
+	 * on the path - in practice, the product's own directly-assigned category (NET-8940 section 8,
+	 * open question 4) - rather than {@link Optional#empty()}. {@link Optional#empty()} is now
+	 * reserved for the case where the product has no valid assigned category path at all.
+	 * <p>
+	 * <b>Precondition this fallback relies on</b>: products must be assigned to leaf categories
+	 * only, never to an internal category that also has its own subcategories carrying other
+	 * products. Under that precondition a leaf never competes with a deeper sibling for the same
+	 * grouping slot, so two products can never be split despite sharing a real ancestor. If it is
+	 * ever violated (a product assigned directly to an internal category like {@code Digital Cameras}
+	 * while other products go deeper into {@code Digital Compacts}/{@code Digital SLR}), the fallback
+	 * can silently split products that should be grouped together - a catalog-authoring/data-quality
+	 * concern to watch for, not something this method attempts to detect or validate defensively.
+	 */
 	@Override
 	public Optional<CategoryModel> resolveGroupingCategory(final ProductModel product)
 	{
@@ -58,10 +76,13 @@ public class DefaultProductComparisonGroupingService implements ProductCompariso
 			}
 
 			final List<CategoryModel> pathFromRoot = buildPathFromRoot(assignedCategory);
-			if (pathFromRoot.size() >= depth)
+			if (pathFromRoot.isEmpty())
 			{
-				return Optional.of(pathFromRoot.get(depth - 1));
+				continue;
 			}
+
+			final int resolvedIndex = Math.min(depth, pathFromRoot.size()) - 1;
+			return Optional.of(pathFromRoot.get(resolvedIndex));
 		}
 
 		return Optional.empty();
@@ -76,24 +97,44 @@ public class DefaultProductComparisonGroupingService implements ProductCompariso
 	 * real navigation category below it, not from that synthetic root (NET-8940 section 4, revised:
 	 * counting the synthetic root made two unrelated top-level categories - "Cameras" and
 	 * "Digital Cameras" - resolve to the same grouping category).
+	 * <p>
+	 * Delegates to {@link #buildRootToLeafPath(CategoryModel)}, which recurses to the root first and
+	 * appends each category on the way back down, then strips that root off the front.
 	 *
 	 * @return the path with the first real navigation category at index 0 and {@code leaf} as the
 	 *         last element
 	 */
 	protected List<CategoryModel> buildPathFromRoot(final CategoryModel leaf)
 	{
-		final LinkedList<CategoryModel> path = new LinkedList<>();
-		CategoryModel current = leaf;
-		while (current != null)
-		{
-			path.addFirst(current);
-			final List<CategoryModel> supercategories = current.getSupercategories();
-			current = CollectionUtils.isEmpty(supercategories) ? null : supercategories.get(0);
-		}
+		final List<CategoryModel> path = buildRootToLeafPath(leaf);
 		if (!path.isEmpty())
 		{
-			path.removeFirst();
+			path.remove(0);
 		}
+		return path;
+	}
+
+	/**
+	 * Recursively builds the full path from the catalog's synthetic root down to {@code category},
+	 * root at index 0. Base case: a category with no supercategories of its own is the synthetic
+	 * root itself, returned as a single-element list. Otherwise recurses on the first supercategory
+	 * (see {@link #buildPathFromRoot(CategoryModel)} on the single-parent-chain assumption) and
+	 * appends {@code category} to the result on the way back up - a plain {@link ArrayList} append,
+	 * since recursing-then-appending naturally produces root-to-leaf order without an
+	 * {@code addFirst}/{@code LinkedList} trick.
+	 */
+	protected List<CategoryModel> buildRootToLeafPath(final CategoryModel category)
+	{
+		final List<CategoryModel> supercategories = category.getSupercategories();
+		if (CollectionUtils.isEmpty(supercategories))
+		{
+			final List<CategoryModel> root = new ArrayList<>();
+			root.add(category);
+			return root;
+		}
+
+		final List<CategoryModel> path = buildRootToLeafPath(supercategories.get(0));
+		path.add(category);
 		return path;
 	}
 
